<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.adamoconnor.test02maps.PostingInformationAndComments.CommentsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="2dp"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="2dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/commentProfile"
                android:layout_width="38dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/defaulticon" />

            <TextView
                android:id="@+id/commentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/date_and_time"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/commentUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/commentProfile"
                android:paddingLeft="5dp"
                android:text="@string/username"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/commentImage"
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/add_btn"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/commentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/post_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/post_description"
            android:textSize="16sp"
            android:layout_weight="0.96"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/commentRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_post"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
