<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.adamoconnor.test02maps.PostingInformationAndComments.CommentsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingTop="2dp"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="2dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/commentProfile"
                android:layout_width="38dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/defaulticon" />

            <TextView
                android:id="@+id/commentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/date_and_time"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/commentUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/commentProfile"
                android:paddingLeft="5dp"
                android:text="@string/username"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/commentImage"
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/add_btn"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/commentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_outline"
            android:padding="15dp"
            android:text="@string/post_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="Post Description"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/commentRemove"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="@string/remove_post"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/updatePost"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/commentRemove"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:text="update Post"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>
